fix missing background-color and borders from visitorlink-postinfo #1670

--- a/webofneeds/won-owner-webapp/src/main/webapp/style/_post-visitor.scss
+++ b/webofneeds/won-owner-webapp/src/main/webapp/style/_post-visitor.scss
@@ -7,11 +7,18 @@
 .postcontent {
   padding: 0 1rem;
   box-sizing: border-box;
-  @include max-content-width($maxContentWidth, $minContentPadding, 'opc');
-  @include empty-description('opc');
   align-items: stretch;
+  max-width: $maxContentWidth;
+  border-left: $thinGrayBorder;
+  border-right: $thinGrayBorder;
+  border-bottom: $thinGrayBorder;
+  background: white;
+  width: 100%;
+  margin: 0 auto;
 
   @media (max-width: $responsivenessBreakPoint){
     padding: 0;
+    border-left: none;
+    border-right: none;
   }
 }
